--- a/wp-content/themes/sixgill/less/all_resource_page.less
+++ b/wp-content/themes/sixgill/less/all_resource_page.less
@@ -186,6 +186,10 @@
 		&-wrapper {
 			width: 100%;
 	    padding: 0px 15px 0px 15px;
+
+			_:-ms-lang(x), & {
+				margin-top: -53px;
+			}
 		}
 
 		div&-buttons {
